Add editing tools

--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "eslint": "^6.8.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "prettier": "^1.19.1",
+    "prettier-plugin-svelte": "^0.7.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
@@ -16,5 +20,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack-dev-server --content-base public"
+  },
+  "private": true,
+  "engines": {
+    "node": "10"
   }
 }
