--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
+    "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
     "eslint": "^6.8.0",
     "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^1.19.1",
     "prettier-plugin-svelte": "^0.7.0",
+    "sass-loader": "^8.0.1",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
